fix mobile whitespace regression

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1067,7 +1067,7 @@ header .navbar ul li a:hover {
 /* Media queries - Responsive timeline on screens less than 600px wide */
 @media screen and (max-width: 600px) {
   .experience {
-    min-height: 100vh;
+    min-height: auto;
   }
 
   .experience .timeline {
